# ASMiM-labs

lab-4/: CMakeLists.txt
lab-4/src/: avx-thread-1.cpp  avx512-specific-memory-benchmark.cpp  int-thread-1.cpp  main.cpp  template-memory-benchmark.hpp
